[gd_scene load_steps=19 format=3 uid="uid://dcn2b57cfvptn"]

[ext_resource type="Texture2D" uid="uid://byjxgfmi21tw6" path="res://art/фото для фона и игры/фонарь.png" id="1_cjor6"]
[ext_resource type="Texture2D" uid="uid://bkq3m7ur4ax71" path="res://art/фото для фона и игры/арбуз.png" id="2_bji8i"]
[ext_resource type="Script" path="res://screen_button.gd" id="3_kvfi7"]
[ext_resource type="Texture2D" uid="uid://dhdg1jb5qkwor" path="res://art/фото для фона и игры/сапоги.png" id="3_vi77k"]
[ext_resource type="Texture2D" uid="uid://3a2qhq0xyf78" path="res://art/фото для фона и игры/карта.png" id="4_qafvd"]
[ext_resource type="Texture2D" uid="uid://ccnwt6lfj3sao" path="res://art/фото для фона и игры/вода.png" id="5_foxh0"]
[ext_resource type="Texture2D" uid="uid://3odo5cc03w1w" path="res://art/фото для фона и игры/лошадка2.png" id="6_tr7yj"]
[ext_resource type="Script" path="res://touch_screen_button.gd" id="8_gqyx1"]
[ext_resource type="Script" path="res://подсказка.gd" id="11_n7u0a"]
[ext_resource type="FontFile" uid="uid://dqxwu1w1r1xh5" path="res://fonts/diffusion-light.ttf" id="12_4crex"]
[ext_resource type="AudioStream" uid="uid://boeqcu3oenclt" path="res://sounds/неверно.mp3" id="13_12v3q"]
[ext_resource type="Script" path="res://label.gd" id="13_f7sby"]
[ext_resource type="AudioStream" uid="uid://cce1xg1gcd1m5" path="res://sounds/песня правильного ответа.mp3" id="14_kvy45"]
[ext_resource type="Texture2D" uid="uid://cpxrb014h83b3" path="res://art/фото для фона и игры/подсказка.png" id="14_yrsag"]

[sub_resource type="GDScript" id="GDScript_bun0g"]
script/source = "extends Node2D
var pressed_button = false
var condition_met = false
var incorrect_choose = Global.count_incor
var incorrects = false

func _ready() -> void:
	Global.count_parts_l1 = 1

func _process(delta: float) -> void:
	if get_node(\"Control/TextureRect/rect12/арбуз_button\").presseds and get_node(\"Control/TextureRect/rect16/лошадка_button\").presseds:
		get_node(\"../Полка_с_объектами2\").visible = true
		get_node(\"подсказкафон\").visible = false
		self.visible = false
		condition_met = true
	if (incorrect_choose % 2) == 0 and incorrect_choose != 0:
		incorrects = true
		get_node(\"подсказкафон\").visible = true
		$Timer.start(1.0)
		if get_node(\"Control/TextureRect/rect12/арбуз_button\").presseds:
			$\"подсказкафон/Подсказка\".update_text(\"     Подсказка: игрушки в походе не нужны\")
		else:
			$\"подсказкафон/Подсказка\".update_text(\" Подсказка: снаружи зеленый, внутри красный\")

func _on_timer_timeout() -> void:
	get_node(\"подсказкафон\").visible = false
	incorrects = false
	
"

[sub_resource type="GDScript" id="GDScript_m4nbu"]
script/source = "extends Control
#var count_excess = 0


func _next_part_level():
	if get_node(\"TextureRect/rect12/арбуз_button\").is_pressed == true:
		var mainScene = load(\"res://главный_экран.gd\")
		get_tree().change_scene_to_packed(mainScene)
	#var mainScene = load(\"res://level_1.tscn\")
	#get_tree().change_scene_to_packed(mainScene)
"

[sub_resource type="GDScript" id="GDScript_ffc4q"]
script/source = "extends ColorRect



#func _on_input_event(event):
#	if event is InputEventScreenTouch:
#		if event.is_action_released(\"ui_touch\"):
			# Скрыть спрайт
#			self.visible = false
			
	#if Input.is_action_just_pressed(\"ui_touch\"):
	#	self.queue_free()

#func _on_button_pressed() -> void:
#	self.visible = false


func _on_texture_button_toggled(toggled_on: bool) -> void:
	pass # Replace with function body.
"

[sub_resource type="LabelSettings" id="LabelSettings_ehlye"]
font_size = 105
font_color = Color(0, 0, 0, 1)
outline_color = Color(0.000113828, 0.000113828, 0.000113828, 1)

[node name="Полка с объектами" type="Node2D"]
position = Vector2(0, -1)
script = SubResource("GDScript_bun0g")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 94.0
offset_top = 66.0
offset_right = 775.0
offset_bottom = 580.0
script = SubResource("GDScript_m4nbu")

[node name="TextureRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 61.0
offset_top = 22.0
offset_right = 742.0
offset_bottom = 474.0
scale = Vector2(1.0019, 1)
color = Color(0.733333, 0.345098, 0.168627, 0.501961)

[node name="rect11" type="ColorRect" parent="Control/TextureRect"]
layout_mode = 0
offset_left = 27.0
offset_top = 26.0
offset_right = 217.0
offset_bottom = 206.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="фонарик_screen_button" type="TouchScreenButton" parent="Control/TextureRect/rect11"]
position = Vector2(5.93742, 11)
scale = Vector2(0.0478979, 0.0482738)
texture_normal = ExtResource("1_cjor6")
script = ExtResource("3_kvfi7")
level_number = 1

[node name="rect12" type="ColorRect" parent="Control/TextureRect"]
layout_mode = 0
offset_left = 247.0
offset_top = 26.0
offset_right = 437.0
offset_bottom = 206.0
color = Color(0.984314, 0.941176, 0.905882, 1)
script = SubResource("GDScript_ffc4q")

[node name="арбуз_button" type="TouchScreenButton" parent="Control/TextureRect/rect12"]
position = Vector2(2.52591, 3)
scale = Vector2(0.0784878, 0.0764526)
texture_normal = ExtResource("2_bji8i")
shape_visible = false
passby_press = true
action = "ui_touch"
script = ExtResource("8_gqyx1")
level_number = 1

[node name="rect13" type="ColorRect" parent="Control/TextureRect"]
layout_mode = 0
offset_left = 467.0
offset_top = 26.0
offset_right = 657.0
offset_bottom = 206.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="сапоги_button" type="TouchScreenButton" parent="Control/TextureRect/rect13"]
position = Vector2(22.0708, 8.00001)
scale = Vector2(0.444837, 0.462604)
texture_normal = ExtResource("3_vi77k")
script = ExtResource("3_kvfi7")
level_number = 1

[node name="rect14" type="ColorRect" parent="Control/TextureRect"]
layout_mode = 0
offset_left = 247.0
offset_top = 246.0
offset_right = 437.0
offset_bottom = 426.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="карта_screen_button" type="TouchScreenButton" parent="Control/TextureRect/rect14"]
position = Vector2(1.52779, -9.53674e-07)
scale = Vector2(0.22977, 0.27451)
texture_normal = ExtResource("4_qafvd")
script = ExtResource("3_kvfi7")
level_number = 1

[node name="rect15" type="ColorRect" parent="Control/TextureRect"]
layout_mode = 0
offset_left = 467.0
offset_top = 246.0
offset_right = 657.0
offset_bottom = 426.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="вода_screen_button" type="TouchScreenButton" parent="Control/TextureRect/rect15"]
position = Vector2(41.4519, 6.99999)
scale = Vector2(0.0419724, 0.0329454)
texture_normal = ExtResource("5_foxh0")
script = ExtResource("3_kvfi7")
level_number = 1

[node name="rect16" type="ColorRect" parent="Control/TextureRect"]
layout_mode = 0
offset_left = 27.0
offset_top = 246.0
offset_right = 217.0
offset_bottom = 426.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="лошадка_button" type="TouchScreenButton" parent="Control/TextureRect/rect16"]
position = Vector2(1.94501, 0)
scale = Vector2(0.204715, 0.22375)
texture_normal = ExtResource("6_tr7yj")
passby_press = true
script = ExtResource("8_gqyx1")
level_number = 1

[node name="Label1" type="Label" parent="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 826.0
offset_top = 57.0
offset_right = 933.0
offset_bottom = 126.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("12_4crex")
theme_override_font_sizes/font_size = 14
text = "Помоги найти вещи"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("13_f7sby")

[node name="Timer" type="Timer" parent="Control"]
wait_time = 2.0
one_shot = true

[node name="Звук правильного ответа" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_kvy45")

[node name="Не правильно" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_12v3q")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="подсказкафон" type="TextureRect" parent="."]
visible = false
offset_left = 350.0
offset_top = 570.0
offset_right = 3430.0
offset_bottom = 920.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("14_yrsag")

[node name="Подсказка" type="Label" parent="подсказкафон"]
layout_mode = 0
offset_left = 400.0
offset_top = 85.0
offset_right = 2973.0
offset_bottom = 285.0
text = "\"Подсказка: снаружи зеленый, внутри красный\""
label_settings = SubResource("LabelSettings_ehlye")
script = ExtResource("11_n7u0a")
level = 2

[connection signal="visibility_changed" from="." to="." method="_process"]
[connection signal="pressed" from="Control/TextureRect/rect11/фонарик_screen_button" to="Control/TextureRect/rect11/фонарик_screen_button" method="_on_pressed"]
[connection signal="pressed" from="Control/TextureRect/rect11/фонарик_screen_button" to="Control/Label1" method="update_text"]
[connection signal="pressed" from="Control/TextureRect/rect12/арбуз_button" to="." method="_process"]
[connection signal="pressed" from="Control/TextureRect/rect12/арбуз_button" to="Control/TextureRect/rect12/арбуз_button" method="_on_pressed"]
[connection signal="pressed" from="Control/TextureRect/rect13/сапоги_button" to="Control/TextureRect/rect13/сапоги_button" method="_on_pressed"]
[connection signal="pressed" from="Control/TextureRect/rect13/сапоги_button" to="Control/Label1" method="update_text"]
[connection signal="pressed" from="Control/TextureRect/rect14/карта_screen_button" to="Control/TextureRect/rect14/карта_screen_button" method="_on_pressed"]
[connection signal="pressed" from="Control/TextureRect/rect14/карта_screen_button" to="Control/Label1" method="update_text"]
[connection signal="pressed" from="Control/TextureRect/rect15/вода_screen_button" to="Control/TextureRect/rect15/вода_screen_button" method="_on_pressed"]
[connection signal="pressed" from="Control/TextureRect/rect15/вода_screen_button" to="Control/Label1" method="update_text"]
[connection signal="pressed" from="Control/TextureRect/rect16/лошадка_button" to="." method="_process"]
[connection signal="pressed" from="Control/TextureRect/rect16/лошадка_button" to="Control/TextureRect/rect16/лошадка_button" method="_on_pressed"]
[connection signal="timeout" from="Control/Timer" to="Control/TextureRect/rect11/фонарик_screen_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="Control/Timer" to="Control/TextureRect/rect12/арбуз_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="Control/Timer" to="Control/TextureRect/rect14/карта_screen_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="Control/Timer" to="Control/TextureRect/rect15/вода_screen_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="Control/Timer" to="Control/TextureRect/rect16/лошадка_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="Control/Timer" to="Control/Label1" method="update_text"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
